assets/css/style.css
/* Google fonts */
@import url('https://fonts.googleapis.com/css2?family=Madimi+One&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');


/* Asterisk Wildcard selector */
* {
    padding: 0;
    margin: 0;
    box-sizing: border-box;
}

/* General body styles */
body {
    min-height: 100vh;
    display: flex;
    flex-direction: column;
    /* Generic project styles */
    color: #53316a;
    font-family: 'roboto', sans-serif;
    background-color: #dbbdca;

}

h1,
h2,
h3 {
    font-family: 'Madimi One', sans-serif;
    text-transform: uppercase;
    letter-spacing: 2px;
}

.hidden-heading {
    display: none;
}

/* header */
header {
    background-color: #dee6ed;
    padding: 0 1rem;
    position: fixed;
    z-index: 99;
    width: 100%;
    box-shadow: 0 2px 2px #3a3a3a;
    display: flex;
    justify-content: space-between;
    align-items: baseline;
}

header a {
    text-decoration: none;
    color: inherit;

}

#menu {
    font-size: 110%;
    letter-spacing: 4px;
    list-style-type: none;
}

#menu>li {
    margin-bottom: 1em;
}

.active {
    border-bottom: 1px solid #53316a;
}

/*  Navbar styles with dropsown toggle */
nav {
    position: absolute;
    background-color: #dee6ed;
    width: 100%;
    left: 0;
    padding: 0 1rem;
    box-shadow: 0 2px 2px #3a3a3a;
    display: none;
    top: 100%;
}

/* Nav toggle */
#nav-toggle:checked~nav {
    display: block;
}

#nav-toggle {
    display: none;
}

.nav-toggle-label {
    font-size: 2rem;
}


/* Main Content */
main {
    /* Make main element take up surplus space and push footer to bottom of page */
    flex: 1 0 auto;
    /* Stop content being covered by the header */
    margin-top: 42px;
    /* Enable flex properties for child elements */
    display: flex;
    flex-direction: column;
}

/* Hero Section */
#hero {
    height: 600px;
    width: 100%;
    background: url("../images/pexels-photo-1266139.webp") no-repeat center center/cover;
    position: relative;
}

#cover-text {
    /* Final value sets opacity so it is semi-transparent */
    background-color: rgba(219, 189, 202, .7);
    font-size: 120%;
    position: absolute;
    bottom: 30px;
    width: 80%;
    min-height: 180px;
    padding-top: 25px;
    padding-left: 10px;
}

#cover-text>h2,
#cover-text>h3 {
    color: #53316a;
}

/* Reasons section */
#reasons {
    width: 90%;
    margin: 20px auto;
}

#reasons h2 {
    margin-bottom: 20px;
    text-align: center;
    font-size: 280%;
}

#benefits-skills>div,
#benefits-social>div {
    line-height: 20px;
    margin-bottom: 20px;
}

#benefits p {
    padding: 0 20px;
}

#benefits hr {

    border-top: 1px solid #53316a;
    margin: 5px 0;
}

#circle-cover-bg {
    background: url(../images/pexels-suzy-hazelwood-1122844.webp) no-repeat top center / cover;
    height: 90vw;
    width: 90vw;
    margin-bottom: 20px;
    /* Make the square image a circle */
    border-radius: 50%;
    max-width: 300px;
    max-height: 300px;
}

#benefits-image {
    display: flex;
    align-items: center;
    justify-content: center;
}


/* Class times section */
#times {
    background: url('../images/pexels-irene-lasus-91462\ \(4\).webp') no-repeat center/cover;
    /*handles responsivity without the need for a media query */
    display: flex;
    flex-wrap: wrap;
}

#times>div {
    color: #53316a;
    background-color: rgba(219, 189, 202, .6);
    padding: 15px;
    text-align: center;
    /* Stop Divs wrapping on screens less tha 400px wide
    Each div will expand to fill the availabel space */
    flex-basis: 200px;
    flex-grow: 1;
    /* Creates grid of class time divs over the background image */
    border: 2px solid #dee6ed;
}

#times p {
    font-weight: bold;
}

/* Gallery styles */
#photos img {

    width: 100%;
}

#photos {
    line-height: 0;
}

/* Form */
#signup {
    background-image: url("../images/pexels-cottonbro-studio-3738088.webp");
    background-size: cover;
    background-position: 75%;
    padding: 20px 10% 0 10%;
    flex-grow: 1;

}

#signup-form {
    color: #53316a;
    background-color: rgba(219, 189, 202, .5);
    padding: 30px;
}

#signup-form>h2 {
    margin-bottom: 20px;

}

.radio-buttons h2 {
    margin-top: 20px;
}

.text-input {
    background: #dee6ed;
    color: #3a3a3a;
    width: 100%;
    height: 25px;
    margin: 5px 0 20px 0;
    border: 1px solid #dbbdca;
    border-radius: 2px;
    padding: 0 5px;
}

#machine-rental {
    width: 100%;
    display: flex;
    justify-content: flex-start;
    padding: 10px 0 0 0;
}

#yes {
    margin-right: 10px;
}

.join-button {
    margin-top: 20px;
    border-radius: 2px;
    padding: 15px 32px;
    font-size: 100%;
    background-color: #53316a;
    color: #dee6ed;
}

/* Footer */
footer {
    background-color: #dee6ed;
}

#social-networks {
    text-align: center;
    padding: 20px 0;
    display: flex;
    justify-content: space-evenly;
    list-style-type: none;
}

#social-networks i {
    font-size: 160%;
    padding: 5%;
    color: #53316a;
}

/* Media query: large or landscape phoned (576px and up) */
@media screen and (min-width: 576px) {
    #photos {
        column-count: 2;
        column-gap: 0;
    }
}

/*  Media query: tablets and larger (768px and up) */
@media screen and (min-width: 768px) {

    /* Header */
    nav {
        display: block;
        position: relative;
        box-shadow: none;
        width: fit-content;
        padding-right: 1rem;
    }

    #menu {
        display: flex;
    }

    #menu>li {
        padding-left: 1rem;
    }

    .nav-toggle-label {
        display: none;
    }

    #logo {
        font-size: 280%;
        line-height: 75px;
        margin: 0 0.5rem;
    }

    /* main content */
    main {
        /* Push main content down to accomodate larger header */
        margin-top: 75px;
    }

    /* Hero */
    #cover-text {
        width: 300px;
        right: 50px;
    }

    /* Reasons Section */
    #benefits-skills,
    #benefits-social {
        display: flex;
        flex-direction: column;
        width: 100%;
    }

    #benefits-skills>div,
    #benefits-social>div {
        width: 75%;
    }

    #benefits-social>div {
        text-align: end;
        align-self: flex-end;
    }

    /* Gallery */
    #photos {
        column-count: 3;
    }

    /* form */
    #sign-up {
        background-position: center;
        position: relative;
    }

    #signup-form {
        max-width: 400px;
        position: absolute;
        left: 10%;
        top: 100px;
    }

    .text-input:hover {
        border-color: #dbbdca;
    }

    .join-button:hover {
        background-color: #dee6ed;
        color: #53316a;
    }

}


/* Large devices (laptops and desktops, 992px and up) */
@media screen and (min-width: 992px) {
    #menu a:hover {
        border-bottom: 1px solid #53316a;
    }

    /* Gallery */
    #photos {
        column-count: 4;
    }


}

/* Larger screens (1200px and up) */
@media screen and (min-width: 1200px) {

    /* Reasons Section */
    #benefits {
        display: flex;
        flex-direction: row;
    }

    #benefits>div {
        flex: 1;
    }

    #benefits-image {
        order: 0;
    }

    #benefits-social {
        order: 1;
    }

    #benefits-social>div {
        align-self: flex-start;
    }

    #benefits-skills>div {
        align-self: flex-end;
    }

    #signup-form {
        top: 100px;
    }
}

